# subtitle-generator

./: .gitignore  README.md  deploy.yaml  gpu.deploy.yaml
configs/: settings.yaml  ui.yaml
docker/: docker-compose.yml  service.Dockerfile  start_ui.sh  ui.Dockerfile
src/: app.py  ui.py
src/service/: api.py  pyproject.toml  server.py
src/service/configs/: config.py
src/service/routers/: asr.py
src/service/transcription/: faster_whisper_transcriber.py  transcriber.py
src/service/utils/: decorators.py  file.py  logger.py  signal.py  type.py  youtube.py
src/ui/: pyproject.toml
src/ui/configs/: config.py
tests/: test_api.py  test_transcriber.py  test_youtube_dl.py
